finish without bonus right now
