# routes/user.js
@@ -27,9 +27,10 @@ router.use(async function (req, res, next) {
 router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
+    if (!user_id) throw {status: 401, message: "Must login to make this save"};
     const recipe_id = req.body.recipeId;
     await user_utils.markAsFavorite(user_id,recipe_id);
-    res.status(200).send("The Recipe successfully saved as favorite");
+    res.status(201).send("The Recipe successfully saved as favorite");
     } catch(error){
     next(error);
   }
@@ -41,7 +42,7 @@ router.post('/favorites', async (req,res,next) => {
 router.get('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    let favorite_recipes = {};
+    //let favorite_recipes = {};
     const recipes_id = await user_utils.getFavoriteRecipes(user_id);
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
@@ -51,6 +52,62 @@ router.get('/favorites', async (req,res,next) => {
     next(error); 
   }
 });
+
+
+/**
+ * This path returns the 3 last recipes that shown by login user
+ */
+router.get('/lastWatched', async (req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    const numberLastWatched = 3;
+    const recipes_id = await user_utils.getLastViewedRecipes(user_id, numberLastWatched);
+    let recipes_id_array = [];
+    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
+    const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    res.status(200).send(results);
+  }
+  catch(error){
+    next(error);
+  }
+});
+
+/**
+ * This path returns all my recipes
+ */
+router.get('/myRecipes', async (req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    if (!user_id) {
+      throw { status: 401, message: "Must login before" };
+    }
+    const recipes = await user_utils.getMyRecipes(user_id);
+    res.status(200).send(recipes);
+  }
+  catch(error){
+    next(error);
+  }
+});
+
+
+/**
+ * This path returns all family recipes
+ */
+router.get('/familyRecipes', async (req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    if (!user_id) {
+      throw { status: 401, message: "Must login before" };
+    }
+    const recipes = await user_utils.getMyRecipes(user_id, true);
+    res.status(200).send(recipes);
+  }
+  catch(error){
+    next(error);
+  }
+});
+
+
 
 
 
